<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress_edit"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:text="@string/address_number" />
            <EditText
                android:id="@+id/addressNumberEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/Inconnu" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/street" />
            <EditText
                android:id="@+id/streetEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/Inconnu" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/postal_code" />
            <EditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/Inconnu" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/city" />
            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/Inconnu" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/validateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validate" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>